# numerical-computing

./: .gitignore  CMakeLists.txt  README.md  main.cpp
examples/: CMakeLists.txt
examples/include/: lecture_1.h  project_1.h  project_2.h
examples/src/: lecture_1.cpp  project_1.cpp  project_2.cpp
gnuplot_iostream/: CMakeLists.txt
include/: Function.h  Point.h
numerical_computing/: CMakeLists.txt
numerical_computing/include/: Function.h  Point.h
numerical_computing/src/: Function.cpp  Point.cpp
src/: Function.cpp  Point.cpp
symbolic_cpp/: CMakeLists.txt
